--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset='utf-8'/>
+    <meta charset="utf-8" />
 </head>
 <body>
     <h1>
         BIG CHUNGUS
     </h1>
-    <div id='container'></div>
+    <div id="container"></div>
+    
+    <!-- Adding onclick event within html file -->
+    <button onclick="alert('Hello World')">Click Me</button>
+    
+    <!-- Adding onclick event in js file with a single property -->
+    <button id="btn1">Click Me</button>
+
+    <!-- Adding onclick event in js file which allows for multiple event listeners -->
+    <button id="btn2">Click Me Too</button>
+
+    <!-- Creating a function for the click event listener -->
+    <button onclick="alertFunction()">CLICK ME BABY</button>
 </body>
-<script src='script.js'></script>
+<script src="script.js"></script>
 </html>
